@@ -13,7 +13,6 @@ import org.slf4j.LoggerFactory;
 import ch.arrg.logreader.core.Config;
 import ch.arrg.logreader.interfaces.Consumer;
 
-// TODO BUG 1 TailReader doesn't always get killed properly
 /** Spawns a tail -f process. */
 public class TailReader implements AbstractReader {
 	private final int TAIL_N = Config.getIntProp("reader.tail.oldLines");
@@ -66,6 +65,7 @@ public class TailReader implements AbstractReader {
 			this.reader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
 		}
 
+		@SuppressWarnings("unused")
 		@Override
 		public void run() {
 			try {
