@@ -2,26 +2,32 @@ package ch.arrg.logreader.ui;
 
 import java.awt.Color;
 import java.awt.Component;
+import java.awt.Toolkit;
+import java.awt.event.ActionEvent;
+import java.awt.event.KeyEvent;
 
 import javax.swing.Box;
 import javax.swing.BoxLayout;
 import javax.swing.JLabel;
+import javax.swing.JScrollBar;
+import javax.swing.JScrollPane;
 
 import ch.arrg.logreader.interfaces.Consumer;
-import ch.arrg.logreader.interfaces.ConsumerCallback;
+import ch.arrg.logreader.interfaces.FilterConsumerCallback;
+import ch.arrg.logreader.ui.logic.MyAction;
 
-// TODO IMPR 1 ctrl-tab shift-ctrl-tab
 public class ConsumerTab implements Consumer {
 	// private final static Logger logger = LoggerFactory.getLogger(ConsumerTab.class);
 
+	private JScrollPane scrollPanel;
 	private DisplayPanel displayPanel;
 	private FilterPanel filterPanel;
 
-	private final ConsumerCallback callback;
+	private final FilterConsumerCallback callback;
 
 	private Box box;
 
-	public ConsumerTab(ConsumerCallback callback) {
+	public ConsumerTab(FilterConsumerCallback callback) {
 		this.callback = callback;
 
 		makeComponents();
@@ -36,11 +42,16 @@ public class ConsumerTab implements Consumer {
 		box.setOpaque(true);
 		box.setBackground(new Color(240, 240, 240));
 
-		displayPanel = new DisplayPanel();
 		filterPanel = new FilterPanel(callback);
-
 		box.add(filterPanel.getBox());
-		box.add(displayPanel);
+
+		displayPanel = new DisplayPanel();
+		scrollPanel = new JScrollPane(displayPanel.getComponent());
+		box.add(scrollPanel);
+
+		// TODO IMPR scroll to bottom when END is pressed
+		// ScrollDown action = new ScrollDown();
+		// action.addToComponent(this);
 	}
 
 	/**
@@ -49,6 +60,7 @@ public class ConsumerTab implements Consumer {
 	@Override
 	public void addLine(String s) {
 		displayPanel.addLine(s);
+		scrollDown();
 	}
 
 	@Override
@@ -68,5 +80,33 @@ public class ConsumerTab implements Consumer {
 
 	public DisplayPanel getDisplayPanel() {
 		return displayPanel;
+	}
+
+	// TODO IMPR make scroll locking work with menu
+	public void scrollDown() {
+		if (!scrollPanel.isValid()) {
+			// Needed because otherwise the app will refilter too early on startup
+			return;
+		}
+
+		Toolkit tk = Toolkit.getDefaultToolkit();
+		boolean scrollLock = tk.getLockingKeyState(KeyEvent.VK_SCROLL_LOCK);
+
+		if (!scrollLock) {
+			scrollPanel.validate();
+			JScrollBar vertical = scrollPanel.getVerticalScrollBar();
+			vertical.setValue(vertical.getMaximum());
+		}
+	}
+
+	class ScrollDown extends MyAction {
+		ScrollDown() {
+			super("Scroll down", "tab-scoll-down", KeyEvent.VK_END, "END");
+		}
+
+		@Override
+		public void actionPerformed(ActionEvent e) {
+			scrollDown();
+		}
 	}
 }
